--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
 
 :root {
-    --primario : rgb(213, 140, 44);
+    --primario : #1F2572;
+    --secundario: #CDEF77;
+    --terciario: #B122CB;
 }
-
-.ajuste {
-    max-height: 600px ;
-}
-
+ /* body {
+     background-color: #1F2572;
+ } */
 .logo {
     width: 100%;
     height: 10%;
 }
 .botton-line{
     border-bottom: solid .1px rgb(128, 128, 128);
+}
+
+@media (max-width: 780px ) {
+    .vertical{
+        display: inline !important;
+    }
+}
+
+.bg-primario {
+    color: var(--secundario);
+    background: linear-gradient(to bottom right, var(--primario) 55%, var(--terciario));
+    border-radius: 39px 39px 39px 39px;
+    -moz-border-radius: 39px 39px 39px 39px;
+    -webkit-border-radius: 39px 39px 39px 39px;
 }
 
