--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,6 @@
     --secundario: #CDEF77;
     --terciario: #B122CB;
 }
- /* body {
-     background-color: #1F2572;
- } */
 .logo {
     width: 100%;
     height: 10%;
@@ -23,10 +20,13 @@
 }
 
 .bg-primario {
-    color: var(--secundario);
+    color: aliceblue;
     background: linear-gradient(to bottom right, var(--primario) 55%, var(--terciario));
     border-radius: 39px 39px 39px 39px;
     -moz-border-radius: 39px 39px 39px 39px;
     -webkit-border-radius: 39px 39px 39px 39px;
 }
 
+.bg-secundario {
+    background-color: var(--primario);
+}
