se terminan ultimos detalles y se suben los mockups al proyecto

--- a/css/main.css
+++ b/css/main.css
@@ -14,16 +14,17 @@ body {
     height: 10%;
 }
 .botton-line{
-    border-bottom: solid .1px rgb(128, 128, 128);
+    border-bottom: solid .1px rgb(219, 219, 219);
 }
 
-@media (max-width: 780px ) {
+@media (max-width: 980px ) {
     .vertical{
         display: inline !important;
     }
     .uso-completo {
         width: 100% !important;
     }
+
 }
 
 .bg-primario {
@@ -32,17 +33,59 @@ body {
     border-radius: 39px 39px 39px 39px;
     -moz-border-radius: 39px 39px 39px 39px;
     -webkit-border-radius: 39px 39px 39px 39px;
+    padding: 50px;
+    transition: width 1s, height 1s, transform 1s;
+    margin: 10px;
+    min-width: 265px;
 }
+
+.bg-primario:hover {
+    transform : scale(1.1);
+} 
+
+.zoom {
+    transition: width 1s, height 1s, transform 1s;
+}
+.zoom:hover {
+    transform : scale(1.1);
+} 
 
 .bg-secundario {
     background-color: var(--primario);
 }
 
-<<<<<<< HEAD
 .rounded-personalizado {
     border-radius: 30px;
-=======
+}
+
 .margin {
     margin-top: 100px
->>>>>>> a604d4341acc53a86fc31912d86269dad457a0b4
+}
+
+a {
+    text-decoration: none
+}
+
+.fundacion1 {
+background-image: url(/images/fundaciones/5.png);
+height: 15rem;
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center center;
+}
+
+.fundacion2 {
+background-image: url(/images/fundaciones/6.png);
+height: 15rem;
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center center;
+}
+
+.fundacion3 {
+background-image: url(/images/fundaciones/7.png);
+height: 15rem;
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center center;
 }
