--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,6 @@ body {
 .botton-line{
     border-bottom: solid .1px rgb(219, 219, 219);
 }
-
 @media (max-width: 980px ) {
     .vertical{
         display: inline !important;
@@ -67,7 +66,7 @@ a {
 }
 
 .fundacion1 {
-background-image: url(/images/fundaciones/5.png);
+background-image: url(../images/fundaciones/5.png);
 height: 15rem;
 background-size: cover;
 background-repeat: no-repeat;
@@ -75,7 +74,7 @@ background-position: center center;
 }
 
 .fundacion2 {
-background-image: url(/images/fundaciones/6.png);
+background-image: url(../images/fundaciones/6.png);
 height: 15rem;
 background-size: cover;
 background-repeat: no-repeat;
@@ -83,7 +82,7 @@ background-position: center center;
 }
 
 .fundacion3 {
-background-image: url(/images/fundaciones/7.png);
+background-image: url(../images/fundaciones/7.png);
 height: 15rem;
 background-size: cover;
 background-repeat: no-repeat;
